# linpodx

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  install.sh  uninstall.sh
bench-tools/: Cargo.toml  compare.py
bench-tools/benches/: phase17_crypto.rs
bench-tools/src/: lib.rs
crates/linpodx-cli/: Cargo.toml
crates/linpodx-cli/src/: client.rs  main.rs  output.rs
crates/linpodx-cli/src/commands/: cluster.rs  completion.rs  container.rs  daemon_mgmt.rs  daemon_pin.rs  distro.rs  doctor.rs  events.rs  exec.rs  image.rs  k8s.rs  mcp.rs  mod.rs  network.rs  passthrough.rs  plugin.rs  pod.rs  sandbox.rs  session.rs  snapshot.rs  util.rs  volume.rs
crates/linpodx-cluster/: Cargo.toml
crates/linpodx-cluster/src/: election.rs  gossip.rs  k8s.rs  lib.rs  peer.rs  raft_http.rs  store.rs  view.rs
crates/linpodx-cluster/tests/: raft_election.rs
crates/linpodx-common/: Cargo.toml
crates/linpodx-common/migrations/: 0001_init.sql  0002_sandbox_profiles.sql  0003_audit_log.sql  0004_snapshots.sql  0005_mcp_sessions.sql  0006_mcp_events.sql  0007_distro_instances.sql  0008_snapshot_jobs.sql  0009_mcp_policies.sql  0010_snapshot_branches.sql  0011_plugins.sql  0012_snapshot_backend.sql  0013_cluster_peers.sql  0014_raft_state.sql  0015_pinned_clients.sql  0016_snapshot_encryption.sql  0017_phase17_schema.sql  0018_audit_hash_v2.sql
crates/linpodx-common/src/: approval.rs  audit_sink.rs  db.rs  error.rs  events.rs  ipc.rs  lib.rs  network.rs  passthrough.rs  state.rs  types.rs  version.rs
crates/linpodx-daemon/: Cargo.toml  build.rs
crates/linpodx-daemon/packaging/scripts/: postinst  prerm
crates/linpodx-daemon/packaging/systemd/: linpodx-daemon.service
crates/linpodx-daemon/src/: approval.rs  config.rs  dispatch.rs  event_bus.rs  main.rs  pin_store.rs  remote.rs  server.rs  snapshot_auto_encrypt.rs  web_ui.rs  web_ui_local.rs
crates/linpodx-daemon/src/dispatch/: cluster.rs  containers.rs  daemon_mgmt.rs  distro.rs  doctor.rs  images.rs  mcp.rs  metrics.rs  networks.rs  pin_clients.rs  plugins.rs  pods.rs  remote_listen.rs  sandbox.rs  secrets.rs  snapshots.rs  system.rs  volumes.rs
crates/linpodx-daemon/tests/: e2e_approvals.rs  e2e_distro.rs  e2e_events.rs  e2e_mcp.rs  e2e_mcp_policy.rs  e2e_mtls.rs  e2e_network_egress.rs  e2e_passthrough.rs  e2e_remote.rs  e2e_resources.rs  e2e_sandbox.rs  e2e_session.rs  e2e_snapshot.rs  e2e_snapshot_async.rs  end_to_end.rs
crates/linpodx-daemon/web-ui/: app.css  app.js  index.html
crates/linpodx-distro/: Cargo.toml
crates/linpodx-distro/src/: build.rs  dispatch.rs  instance.rs  lib.rs  menu.rs  registry.rs
crates/linpodx-distro/src/templates/: alpine.rs  arch.rs  debian.rs  fedora.rs  mod.rs  nixos.rs  ubuntu.rs
crates/linpodx-distro/tests/: distro_lifecycle.rs
crates/linpodx-gui/: .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  build.rs  tauri.conf.json
crates/linpodx-gui-core/: Cargo.toml
crates/linpodx-gui-core/src/: connection.rs  daemon_client.rs  lib.rs  messages.rs  state.rs
crates/linpodx-gui-core/src/rings/: daemon.rs  events.rs  mod.rs
crates/linpodx-gui/packaging/: linpodx.desktop
crates/linpodx-gui/src/: connection.rs  ffi.rs  lib.rs  main.rs  shell.rs  state.rs
crates/linpodx-gui/src/cpp/: mainwindow.cpp  mainwindow.h
crates/linpodx-gui/src/views/: approval_modal.rs  audit.rs  containers.rs  images.rs  metrics.rs  mod.rs  networks.rs  pinned_clients.rs  plugins.rs  sandbox.rs  session.rs  snapshot.rs  volumes.rs
crates/linpodx-mcp/: Cargo.toml
crates/linpodx-mcp/benches/: policy.rs
crates/linpodx-mcp/src/: bridge.rs  lib.rs  policy.rs  protocol.rs
crates/linpodx-mcp/tests/: policy_e2e.rs
crates/linpodx-netfilter/: Cargo.toml
crates/linpodx-netfilter/packaging/scripts/: postinst  prerm
crates/linpodx-netfilter/src/: applier.rs  lib.rs  resolver.rs  wire.rs
crates/linpodx-netfilter/tests/: helper_e2e.rs
crates/linpodx-plugin/: Cargo.toml
crates/linpodx-plugin/benches/: invoke.rs
crates/linpodx-plugin/src/: host_api.rs  key_registry.rs  lib.rs  loader.rs  manifest.rs  registry.rs  signing.rs
crates/linpodx-plugin/tests/: audit_filter_chain.rs
crates/linpodx-runtime/: Cargo.toml
crates/linpodx-runtime/benches/: cgroup.rs  container.rs  snapshot.rs
crates/linpodx-runtime/src/: egress_enforcer.rs  image.rs  lib.rs  metrics.rs  network.rs  network_filter.rs  oci_tar.rs  overlayfs.rs  parse.rs  passthrough.rs  pod.rs  podman.rs  secret.rs  snapshot.rs  snapshot_crypto.rs  snapshot_key_rotation.rs  version.rs  volume.rs
crates/linpodx-runtime/tests/: network_filter_e2e.rs  podman_lifecycle.rs  real_podman.rs
crates/linpodx-sandbox/: Cargo.toml
crates/linpodx-sandbox/src/: audit.rs  cluster_store.rs  lib.rs  manager.rs  mcp_audit.rs  mcp_policy.rs  plugin_store.rs  policy.rs  profile.rs  schema.rs  secprofile.rs  session.rs  snapshot.rs  snapshot_trigger.rs
crates/linpodx-sandbox/tests/: real_run.rs
crates/linpodx-webui/: Cargo.toml  build.rs  index.html
crates/linpodx-webui/src/: api_client.rs  app.rs  helpers.rs  lib.rs  style.css  ws.rs
crates/linpodx-webui/src/components/: audit.rs  charts.rs  cluster.rs  command_palette.rs  container_detail.rs  containers.rs  context_menu.rs  create_modal.rs  dashboard.rs  disk_usage.rs  exec_modal.rs  exec_pty_modal.rs  icons.rs  illustrations.rs  images.rs  list_table.rs  live_events.rs  logs_modal.rs  mod.rs  networks.rs  pin_clients.rs  plugins.rs  pods.rs  push_modal.rs  sandbox.rs  secrets.rs  sessions.rs  settings.rs  snapshots.rs  stacks.rs  xterm.rs  (+1 more)
examples/plugins/audit-egress/: Cargo.toml  README.md  linpodx-plugin.toml
examples/plugins/audit-redact-secrets/: Cargo.toml  README.md  linpodx-plugin.toml
examples/plugins/auto-allow-mount/: Cargo.toml  README.md  linpodx-plugin.toml
examples/plugins/inject-tracing-env/: Cargo.toml  README.md  linpodx-plugin.toml
examples/plugins/require-readonly-rootfs/: Cargo.toml  README.md  linpodx-plugin.toml
tests/: Cargo.toml  phase17_integration.rs  phase18_e2e_smoke.rs
tests/src/: lib.rs
(+49 files in other folders)
