[workspace]
resolver = "2"
members = ["crates/*", "bench-tools", "tests"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kernalix7/linpodx"
homepage = "https://github.com/kernalix7/linpodx"
authors = ["Kim DaeHyun <kernalix7@kodenet.io>"]

[workspace.dependencies]
# Internal crates
linpodx-common = { path = "crates/linpodx-common", version = "0.1.1" }
linpodx-runtime = { path = "crates/linpodx-runtime", version = "0.1.1" }
linpodx-sandbox = { path = "crates/linpodx-sandbox", version = "0.1.1" }
linpodx-mcp = { path = "crates/linpodx-mcp", version = "0.1.1" }
linpodx-distro = { path = "crates/linpodx-distro", version = "0.1.1" }
linpodx-netfilter = { path = "crates/linpodx-netfilter", version = "0.1.1" }
linpodx-plugin = { path = "crates/linpodx-plugin", version = "0.1.1" }
linpodx-cluster = { path = "crates/linpodx-cluster", version = "0.1.1" }
linpodx-webui = { path = "crates/linpodx-webui", version = "0.1.1" }

# Phase 2E: DNS-based egress allowlist filter
# Bumped 0.24→0.25 to address RUSTSEC-2026-0119 (O(n^2) name compression CPU exhaustion).
# 0.25 has a residual advisory RUSTSEC-2026-0118 (NSEC3 closest-encloser proof loop on
# cross-zone responses) which is waived in deny.toml — that path requires DNSSEC
# validation which linpodx never enables (the egress filter is a forwarder, not a
# validating resolver). 0.26 fixes 0118 but rewrites NameServerConfig and removes
# ResolveError; deferring that migration to a future release.
hickory-resolver = "0.25"
hickory-server = "0.25"
hickory-proto = "0.25"

# Phase 6: WASM plugin runtime
# Bumped 26→43.0.1 to address sandbox-escape CRITICALs RUSTSEC-2026-0095 / -0096
# and 12 other wasmtime advisories. The 24 LTS branch was tried first but lacks
# backports for 6 winch/pooling-allocator advisories; 43.0.1 is the lowest stable
# line that closes every wasmtime CVE in the current dep graph.
wasmtime = { version = "43.0.1", default-features = false, features = ["runtime", "cranelift"] }
toml = "0.8"

# Phase 7: Remote daemon (WebSocket transport)
axum = { version = "0.7", default-features = false, features = ["ws", "tokio", "http1", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "__rustls-tls"] }
tower = { version = "0.5", default-features = false }

# Phase 8: mTLS for remote daemon
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
x509-parser = "0.16"
mime_guess = "2"

# Phase 8 dev: cert generation for tests
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

# Phase 9: cluster (HTTP gossip) + bench
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
criterion = { version = "0.5", default-features = false }

# Phase 10: K8s scaffold + diff_v2 file-level + tar
kube = { version = "0.96", default-features = false, features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.23", default-features = false, features = ["latest"] }
tar = "0.4"

# Phase 11: seccomp profile compiler + base64 (registry auth decode)
seccompiler = "0.5"
base64 = "0.22"

# Phase 12: interactive PTY proxy + CLI raw mode
portable-pty = "0.8"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "signal", "sync", "time", "fs"] }
tokio-util = { version = "0.7" }
tokio-stream = "0.1"
futures = "0.3"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Errors
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"

# DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Sandbox / config
# Migrated serde_yml -> serde_norway: serde_yml was archived upstream and is
# RUSTSEC-2025-0068 (unsound) + pulls libyml RUSTSEC-2025-0067. serde_norway is
# a maintained drop-in fork of serde_yaml with the same API surface.
serde_norway = "0.9"
sha2 = "0.10"

# Phase 15 — plugin signature verification (ed25519)
ed25519-dalek = { version = "2", default-features = false, features = ["std", "pkcs8", "pem"] }

# Phase 16 — snapshot at-rest encryption (AES-256-GCM)
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "rand_core"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# Phase 17 — argon2id KDF (snapshot encryption hardening).
# Pinned exactly per security policy for crypto deps. License: Apache-2.0 OR MIT.
# `std` feature required so `argon2::Error` implements `std::error::Error` —
# lets `thiserror` `#[source]` preserve the chain for `anyhow::Error::chain()`.
argon2 = { version = "=0.5.3", features = ["std"] }

# GUI
iced = { version = "0.13", features = ["tokio"] }

# Test helpers
tempfile = "3"
assert_cmd = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
