[package]
name = "linpodx-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "linpodx daemon — Unix socket API server"
build = "build.rs"

[[bin]]
name = "linpodx-daemon"
path = "src/main.rs"

[package.metadata.generate-rpm]
# Phase 18 — runtime requires for the .rpm. podman is the OCI runtime; sqlite is
# loaded dynamically for the Phase 2C session DB.
requires = { podman = ">= 4.6", "sqlite-libs" = "*" }
assets = [
    { source = "target/release/linpodx-daemon", dest = "/usr/bin/linpodx-daemon", mode = "755" },
    { source = "packaging/systemd/linpodx-daemon.service", dest = "/usr/lib/systemd/system/linpodx-daemon.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/linpodx-daemon/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/linpodx-daemon/LICENSE", mode = "644", doc = true },
]

# Phase 18 — Debian/Ubuntu packaging metadata for `cargo deb`.
# Ships a systemd unit under /lib/systemd/system but does NOT enable it; users
# opt in with `systemctl enable --now linpodx-daemon`. Maintainer scripts only
# call `daemon-reload` and `stop`, never `enable`.
[package.metadata.deb]
maintainer = "Kim DaeHyun <kernalix7@kodenet.io>"
copyright = "2026, Kim DaeHyun <kernalix7@kodenet.io>"
license-file = ["../../LICENSE", "0"]
extended-description = "linpodx daemon — Unix socket / WebSocket API server for the linpodx container management platform."
section = "admin"
priority = "optional"
depends = "podman (>= 4.6), libsqlite3-0, libc6"
maintainer-scripts = "packaging/scripts"
systemd-units = { unit-scripts = "packaging/systemd", enable = false, start = false }
assets = [
    ["target/release/linpodx-daemon", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/linpodx-daemon/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/linpodx-daemon/copyright", "644"],
]

[dependencies]
linpodx-common = { workspace = true }
linpodx-runtime = { workspace = true }
linpodx-sandbox = { workspace = true }
linpodx-mcp = { workspace = true }
linpodx-distro = { workspace = true }
linpodx-plugin = { workspace = true }
linpodx-cluster = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
# Phase 7: Remote daemon (WebSocket transport)
# Phase 8 adds the `query` + `json` features for the Web UI handlers.
axum = { workspace = true, features = ["query", "json"] }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
# Phase 8: Web UI static asset content-type detection
mime_guess = { workspace = true }
# Phase 8: mTLS termination on the remote WebSocket listener
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
axum-server = { workspace = true }
tokio-rustls = { workspace = true }
x509-parser = { workspace = true }
# Phase 15 — sha-256 fingerprint of pinned client certs + persistence
sha2 = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rcgen = { workspace = true }
