[package]
name = "linpodx-gui-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "linpodx GUI core — Qt-agnostic state model, IPC client, and event rings"

[lib]
path = "src/lib.rs"

[dependencies]
linpodx-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
