[package]
name = "linpodx-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "linpodx desktop GUI — iced-based live dashboard"

[lib]
path = "src/lib.rs"

[[bin]]
name = "linpodx-gui"
path = "src/main.rs"

[dependencies]
linpodx-common = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
