[package]
name = "linpodx-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "linpodx desktop GUI — thin Tauri 2 shell over the daemon-served web UI"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "linpodx-gui"
path = "src/main.rs"

# Phase 24 (Tauri pivot) — RPM packaging. The Tauri webview links dynamically
# against the system WebKitGTK 4.1 + GTK 3 stack. Runtime require names differ
# per distro; Fedora ships the webkit runtime as `webkit2gtk4.1`.
[package.metadata.generate-rpm]
requires = { "webkit2gtk4.1" = "*", "gtk3" = "*", "librsvg2" = "*" }
assets = [
    { source = "target/release/linpodx-gui", dest = "/usr/bin/linpodx-gui", mode = "755" },
    { source = "packaging/linpodx.desktop", dest = "/usr/share/applications/linpodx.desktop", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/linpodx-gui/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/linpodx-gui/LICENSE", mode = "644", doc = true },
]

# Phase 24 (Tauri pivot) — Debian/Ubuntu packaging. `depends` uses the apt-side
# runtime SONAMEs for the WebKitGTK 4.1 + GTK 3 stack that Tauri loads at
# runtime. (Debian/Ubuntu ship the runtime as `libwebkit2gtk-4.1-0`.)
[package.metadata.deb]
maintainer = "Kim DaeHyun <kernalix7@kodenet.io>"
copyright = "2026, Kim DaeHyun <kernalix7@kodenet.io>"
license-file = ["../../LICENSE", "0"]
extended-description = "linpodx desktop GUI — a thin Tauri 2 shell that displays the linpodx daemon's built-in web UI."
section = "x11"
priority = "optional"
depends = "libwebkit2gtk-4.1-0, libgtk-3-0, librsvg2-2, libc6"
assets = [
    ["target/release/linpodx-gui", "usr/bin/", "755"],
    ["packaging/linpodx.desktop", "usr/share/applications/linpodx.desktop", "644"],
    ["../../README.md", "usr/share/doc/linpodx-gui/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/linpodx-gui/copyright", "644"],
]

[dependencies]
linpodx-common = { workspace = true }
linpodx-gui-core = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
